test/error/VisibilityPrivateMethodDerived.fu
public class Base
{
	static bool Priv() => true;
}

public class Test : Base
{
	public static bool Run()
	{
		return Priv(); //ERROR: Cannot access private member 'Priv'
	}
}
